# drogue-device

device/: Cargo.toml
device/src/bsp/: mod.rs
device/src/bsp/boards/: mod.rs
device/src/bsp/boards/nrf52/: adafruit_feather_sense.rs  microbit.rs
device/src/bsp/boards/stm32f0/: mod.rs  stm32f072b_disco.rs
docs/modules/ROOT/: examples_nav.adoc
docs/modules/ROOT/pages/: examples_basic.adoc
examples/nrf52/adafruit-feather-sense/blinky/src/: main.rs
examples/rp/pico-w/: Cargo.toml
examples/rp/pico-w/wifi/: Cargo.toml  README.adoc
examples/rp/pico-w/wifi/src/: main.rs
examples/stm32f0/stm32f072b-disco/: Cargo.toml
examples/stm32f0/stm32f072b-disco/.cargo/: config.toml
examples/stm32f0/stm32f072b-disco/blinky/: Cargo.toml  README.adoc
examples/stm32f0/stm32f072b-disco/blinky/src/: main.rs
examples/stm32f0/stm32f072b-disco/uart/: Cargo.toml
examples/stm32f0/stm32f072b-disco/uart/src/: main.rs
xtask/src/: main.rs
